--- a/app/client/templates/common/navbar/navbar.css
+++ b/app/client/templates/common/navbar/navbar.css
@@ -1,10 +1,10 @@
-.nav-wrapper .button-collapse i {
+.navbar .nav-wrapper .button-collapse i {
 	font-size: 2.2rem;
 	padding-left: 10px;
 	padding-right: 10px;
 }
 
-.nav-wrapper .brand-logo {
+.navbar .nav-wrapper .brand-logo {
 	font-family: 'Roboto Slab', serif;
 	font-weight: 700;
 	font-size: 1.6rem;
@@ -12,16 +12,18 @@
 	padding-right: 20px;
 }
 
-#search {
+.navbar nav div#search {
 	display: none;
 	margin-bottom: 0;
 }
 
-.nav-wrapper #toggle-search i {
-  padding-right: 15px;
-  padding-left: 15px;
+.navbar .navbar-fixed input[type=text] {
+  height: 2rem;
 }
 
-.navbar-fixed input[type=text] {
-  height: 2rem;
+@media only screen and (max-width: 600px) {
+	.navbar i {
+		height: 56px;
+		line-height: 56px;
+	}
 }
